--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,6 +20,30 @@ html, body {
   height: 100%;
 }
 
+
+.select2-container {
+  vertical-align: top;
+}
+.view_switcher ul, .view_switcher ul li {
+  vertical-align: top;
+}
+.view_switcher ul li:before {
+  font-size:1em;
+  z-index:8000;
+  display:block;
+  margin:0 auto;
+}
+.view_switcher a {
+  font-size:0;
+  z-index:9000;
+  text-align: center;
+}
+.view_switcher a:before {
+  
+}
+
+
+
 /* line 31, style.scss */
 body {
   font-family: "open_sans_regular", sans-serif;
@@ -1489,6 +1513,9 @@ footer .content {
     float: left;
     padding: .5em;
   }
+  .filter #location {
+    vertical-align: top;
+  }
   /* line 1213, style.scss */
   .filter label.arrows .ui-selectmenu-button {
     width: 100%!important;
@@ -1835,14 +1862,18 @@ ul.hits::-webkit-scrollbar {
   display: inline-block;
   width: calc(50% - 10px);
   margin: 0 0 0 5px;
+  position:relative;
   height: 70%;
   font-family: FontAwesome;
 }
 /* line 1560, style.scss */
 .view_switcher ul li:before {
-  float: left;
+  /*float: left;*/
   position: absolute;
-  margin: 5px 0 0 5px;
+  top: 9px;
+  left: 53%;
+  margin-left:-.5em;
+  /*margin: 5px 0 0 5px;*/
 }
 /* line 1565, style.scss */
 .view_switcher ul li a {
@@ -2041,6 +2072,7 @@ span.eyes.blink .eye {
 .avatar .menu {
     background: #333333;
     padding: 0;
+    position:absolute;
     width: 100%;
     clear: both;
     display: none;
@@ -2085,3 +2117,5 @@ span.eyes.blink .eye {
 .no-margin {
     margin: 0;
 }
+
+.select-
