- Added hover styles for links in Avatar box - Removed dropdown from Avatar box. Logout link was already present, moved Dashboard link to be in line with others, removing the need for the dropdown. - Duplicated "Search Users" item in admin nav, to save time when adding properties manually. Now appears outside of admin dropdown, but only appears for admins. - Moved Heat Types in rental creation form to be next to Heat Included

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2081,6 +2081,9 @@ ul.hits::-webkit-scrollbar {
     font-size: .6em;
     position: relative;
     text-transform: uppercase; }
+.avatar a:hover {
+    color:#74B164;
+}
 .avatar a span {
     margin-right: 5px; }
 .avatar .user_name {
