--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -2163,3 +2163,76 @@ aside.my_properties {
 		}
 	}
 }
+
+
+
+// Home Page Styles
+.gorilla {
+	background:url(/img/gorilla.jpg);
+	background-size:cover;
+	height:1000px;
+	width:100%;
+	h1 {
+		text-align:center;
+		color:white;
+		font-size:5em;
+		margin:.25em auto 1em auto;
+	}
+	label  {
+		display:block;
+		background:#74b164;
+		padding:5px;
+		position:relative;
+		margin:0 auto;
+		width:734px;
+		border-radius:8px;
+		input[type=text] {
+			display:inline-block;
+			width:85%;
+			font-size:1.5em;
+			padding:8px 8px 8px 55px;
+			&:focus {
+				outline:none;
+			}
+		}
+		ul {
+			position:absolute;
+			z-index:1000;
+			right:0px;
+			top:5px;
+			height:45px;
+			padding:0;
+			border-radius:0 8px 8px 0;
+			list-style:none;
+			li {
+				display:none;
+				background:$green;
+				text-align:center;
+				width:50px;
+				color:white;
+				font-size:1.75em;
+				height:100%;
+			}
+			&:hover {
+				li {
+					display:list-item;
+				}
+			}
+			li.selected {
+				display:list-item;
+			}
+		}
+		.fa {
+			font-family:FontAwesome;
+			&:hover {
+				cursor:pointer;
+			}
+		}
+	}
+	.select2-container--default {
+		height:40px;
+			.select2-selection--single {
+			height:40px;
+		}
+	}
+}
