--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2103,4 +2103,8 @@ aside.my_properties a.property-add:hover {
     .gorilla .select2-container--default .select2-selection--single {
       height: 40px; }
 
+#rental-list li > a {
+  color: inherit;
+  text-decoration: none; }
+
 /*# sourceMappingURL=style.css.map */
