--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -2236,3 +2236,13 @@ aside.my_properties {
 		}
 	}
 }
+
+
+#rental-list {
+	li {
+		> a {
+			color:inherit;
+			text-decoration:none;
+		}
+	}
+}
