--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Khula:400,800);
+@import url(https://fonts.googleapis.com/css?family=Khula:400,800);
 .admin_nav {
   height: 48px;
   width: 100%;
