--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -44,7 +44,7 @@ body {
 }
 .view_switcher ul li:before {
   font-size:1em;
-  z-index:8000;
+  // z-index:8000;
   display:block;
   margin:0 auto;
 }
