CSS changes: - made password field on login form same width as email field, added green border to bottom of field - removed top margin from the first <h3> tag in the sidebar on the admin dashboard, bringing up to line up with top of content in main column

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -192,9 +192,11 @@ pre {
 
 /* line 160, style.scss */
 #signupmodal form input[type="text"], #signupmodal form input[type="password"], #login form input[type="text"], #login form input[type="password"] {
-  width: 50%;
+  width: 100%;
   border-top: 1px solid #74b164;
-  float: left; }
+  border-bottom: 1px solid #74b164;
+  float: left;
+  margin-bottom: 1em; }
 
 /* line 165, style.scss */
 #signupmodal form input[type="email"], #login form input[type="email"] {
@@ -2041,6 +2043,8 @@ ul.hits::-webkit-scrollbar {
 
 aside.my_properties a.property-add:hover {
   background: #5b964c; }
+aside.my_properties h3:first-child {
+  margin-top: 0; }
 
 .gorilla {
   background: url(/img/gorilla.jpg);
