--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -204,7 +204,7 @@ pre {
 #signupmodal form input, #login form input {
   height: 55px;
   border: none;
-  font-size: .6em;
+  font-size: 1em;
   padding: 1em;
 }
 /* line 142, style.scss */
@@ -246,7 +246,8 @@ pre {
 }
 /* line 171, style.scss */
 #signupmodal form input[type="submit"], #login form input[type="submit"] {
-  padding: .75em;
+  padding: 0 .75em;
+  line-height:1em;
   background: #74b164;
   color: white;
   text-align: center;
