CSS changes: - aligned paragraphs on main page to right-hand alignment - adjusted styles to accommodate 2nd line in headers on home page  (Ad Free Browsing vs Ad Free) - further refactoring to style.scss to reinstate lost nesting
Markup changes:
- adjusted ad free heading on home page to say ad free browsing

--- a/public/css/integrate.css
+++ b/public/css/integrate.css
@@ -29,14 +29,30 @@
 	margin:0;
 	color:white;
 }
+.promofree h1 {
+	margin-top:-.25em;
+	position:relative;
+}
+.promofree h1 small {
+	display:block;
+	position:absolute;
+	top:1.5em;
+	font-size:.5em;
+}
 .promofree h1, .simple h1 {
 	float:left;
 	text-align:left;
 	width:470px;
 }
 .promofree p, .simple p {
-	/*float:right;*/
+	float:right;
 	text-align: left;
+}
+.promofree p {
+	margin-top:2.5em;
+}
+.simple p {
+	margin-top:3.25em;
 }
 .zerorisk p {
 	/*float:left;*/
