CSS changes: - adjusted styles for the view switcher on the results pages to accommodate reintroduction of text onto those buttons
Markup changes:
- changed the way the icons are drawn onto the buttons on the view switcher, introduced an <i> element to represent them instead of tagging the class onto the <li>. this is much cleaner and eliminates a few font-related conflicts that existed in the previous way of doing things

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,13 +26,13 @@ body {
 
 .view_switcher ul li:before {
   font-size: 1em;
-  display: block;
   margin: 0 auto; }
 
 .view_switcher a {
-  font-size: 0;
   z-index: 9000;
   text-align: center; }
+  .view_switcher a:hover {
+    color: #47743b; }
 
 body {
   font-family: "open_sans_regular", sans-serif;
