CSS changes: - cleaned up an issue I inadvertently created by making an open-ended selector (.landing) - removed some white space in style.scss

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2077,8 +2077,7 @@ aside.my_properties h3:first-child {
     .gorilla .select2-container--default .select2-selection--single {
       height: 40px; }
 
-.landing
-#rental-list li > a {
+#rental-list a {
   color: inherit;
   text-decoration: none; }
 
