--- a/public/css/style.css
+++ b/public/css/style.css
@@ -152,15 +152,12 @@ pre {
         border-right: 1px solid #74b164; }
       #signupmodal form input:focus, #login form input:focus {
         outline: none; }
+    #signupmodal form input[type="text"], #signupmodal form input[type="password"], #signupmodal form input[type="email"], #login form input[type="text"], #login form input[type="password"], #login form input[type="email"] {
+      display: block;
+      transition: .1s; }
     #signupmodal form input.firstpass, #login form input.firstpass {
       border-right: 1px solid #74b164; }
 
-/* line 152, style.scss */
-#signupmodal form input[type="text"], #signupmodal form input[type="password"], #signupmodal form input[type="email"], #login form input[type="text"], #login form input[type="password"], #login form input[type="email"] {
-  display: block;
-  transition: .1s; }
-
-/* line 155, style.scss */
 #signupmodal form input[type="text"]:focus, #signupmodal form input[type="password"]:focus, #signupmodal form input[type="email"]:focus, #login form input[type="text"]:focus, #login form input[type="password"]:focus, #login form input[type="email"]:focus {
   background: #efefef;
   transition: .1s; }
@@ -213,48 +210,37 @@ pre {
   position: relative;
   border: none !important;
   overflow: visible; }
+  .ui-dialog.noTitle .ui-selectmenu-button {
+    display: block;
+    width: 100% !important;
+    padding: 1em;
+    border-radius: 0;
+    background: #333333;
+    border: none;
+    color: white;
+    font-size: 0.8em !important;
+    font-family: "open_sans_regular", sans-serif !important;
+    text-align: center; }
+    .ui-dialog.noTitle .ui-selectmenu-button:focus {
+      outline: none !important;
+      border: none !important; }
+  .ui-dialog.noTitle .ui-selectmenu-text {
+    font-size: 0.8em !important;
+    text-align: center; }
+  .ui-dialog.noTitle .ui-menu {
+    display: block !important;
+    position: absolute;
+    z-index: 9999 !important; }
 
-/* line 202, style.scss */
-.ui-dialog.noTitle .ui-selectmenu-button {
-  display: block;
-  width: 100% !important;
-  padding: 1em;
-  border-radius: 0;
-  background: #333333;
-  border: none;
-  color: white;
-  font-size: 0.8em !important;
-  font-family: "open_sans_regular", sans-serif !important;
-  text-align: center; }
-
-/* line 213, style.scss */
-.ui-dialog.noTitle .ui-selectmenu-button:focus {
-  outline: none !important;
-  border: none !important; }
-
-/* line 218, style.scss */
-.ui-dialog.noTitle .ui-selectmenu-text {
-  font-size: 0.8em !important;
-  text-align: center; }
-
-/* line 222, style.scss */
-.ui-dialog.noTitle .ui-menu {
-  display: block !important;
-  position: absolute;
-  z-index: 9999 !important; }
-
-/* line 227, style.scss */
 .ui-dialog.noTitle .ui-state-hover, .ui-dialog.noTitle .ui-state-focus {
   background: #333333;
   color: white; }
 
-/* line 231, style.scss */
 .ui-dialog.noTitle #ui-id-1-menu {
   position: absolute;
   font-family: "open_sans_regular", sans-serif !important;
   border: none !important; }
 
-/* line 235, style.scss */
 .ui-dialog.noTitle #ui-id-1-menu li.ui-menu-item {
   background: #74b164;
   color: #333333;
@@ -262,17 +248,14 @@ pre {
   font-size: 0.6em !important;
   border: none !important; }
 
-/* line 241, style.scss */
 .ui-dialog.noTitle #ui-id-1-menu li.ui-menu-item:hover {
   background: #333333 !important;
   color: #74b164 !important; }
 
-/* line 246, style.scss */
 .ui-dialog.noTitle #ui-id-1-menu:focus {
   outline: none !important;
   color: #74b164 !important; }
 
-/* line 251, style.scss */
 .ui-dialog.noTitle .ui-dialog-titlebar-close, .ui-dialog.noTitle .ui-icon-closethick {
   background: white !important;
   background-image: none !important;
@@ -280,7 +263,6 @@ pre {
   right: 10px !important;
   border: none !important; }
 
-/* line 257, style.scss */
 .ui-dialog.noTitle .ui-dialog-titlebar-close:after, .ui-dialog.noTitle .ui-icon-closethick:after {
   content: "\f00d";
   font-family: FontAwesome;
@@ -296,48 +278,40 @@ pre {
   color: #74b164 !important;
   z-index: 9999; }
 
-/* line 273, style.scss */
 .ui-dialog.noTitle .ui-dialog-titlebar {
   background: none;
   border: none;
   padding: 0; }
 
-/* line 278, style.scss */
 .ui-dialog.noTitle h1, .ui-dialog.noTitle h2 {
   text-align: center;
   font-weight: 400; }
 
-/* line 282, style.scss */
 .ui-dialog.noTitle h1 {
   color: #4a4a4a;
   font-size: 1.5em;
   margin: 0; }
 
-/* line 287, style.scss */
 .ui-dialog.noTitle h2 {
   color: #74b164;
   margin: 0;
   font-size: .8em; }
 
-/* line 294, style.scss */
 .ui-widget-overlay {
   opacity: 0.5 !important;
   background: #4a4a4a !important; }
 
-/* line 298, style.scss */
 blockquote {
   padding: 1em;
   font-size: 2em;
   margin: 1em 0;
   background: #efefef; }
 
-/* line 304, style.scss */
 header {
   background: #333333;
   height: 65px;
   border-bottom: 6px solid #7a694b; }
 
-/* line 308, style.scss */
 header .home {
   font-size: 0;
   transition: width .2s;
@@ -349,7 +323,6 @@ header .home {
   top: 2px;
   background: url(../img/logo_no_eyes.png); }
 
-/* line 319, style.scss */
 header .home:hover {
   background-position: 0 -52px; }
 
@@ -360,7 +333,6 @@ header .main {
   margin: 0 auto;
   width: 995px; }
 
-/* line 330, style.scss */
 header .user_actions {
   float: right;
   height: 59px;
@@ -368,44 +340,35 @@ header .user_actions {
   line-height: 54px;
   position: relative;
   color: white; }
+  header .user_actions select, header .user_actions .ui-selectmenu-button {
+    background: none;
+    -webkit-appearance: none;
+    background-image: url(/rg/img/select_arrow.png);
+    background-color: none;
+    border: none;
+    padding-left: 25px;
+    font-family: "open_sans_regular", sans-serif;
+    color: #74b164;
+    display: inline-block;
+    height: 70%;
+    vertical-align: middle;
+    font-weight: 700;
+    background-position: left .5em center;
+    background-repeat: no-repeat; }
+    header .user_actions select:focus, header .user_actions .ui-selectmenu-button:focus {
+      outline: none; }
+  header .user_actions select, header .user_actions button {
+    vertical-align: middle;
+    position: relative;
+    height: 70%;
+    display: inline-block; }
+  header .user_actions button {
+    color: white;
+    font-weight: 700;
+    font-size: 1.1em;
+    margin-left: 10px;
+    line-height: 100%; }
 
-/* line 337, style.scss */
-header .user_actions select, header .user_actions .ui-selectmenu-button {
-  background: none;
-  -webkit-appearance: none;
-  background-image: url(/rg/img/select_arrow.png);
-  background-color: none;
-  border: none;
-  padding-left: 25px;
-  font-family: "open_sans_regular", sans-serif;
-  color: #74b164;
-  display: inline-block;
-  height: 70%;
-  vertical-align: middle;
-  font-weight: 700;
-  background-position: left .5em center;
-  background-repeat: no-repeat; }
-
-/* line 352, style.scss */
-header .user_actions select:focus, header .user_actions .ui-selectmenu-button:focus {
-  outline: none; }
-
-/* line 356, style.scss */
-header .user_actions select, header .user_actions button {
-  vertical-align: middle;
-  position: relative;
-  height: 70%;
-  display: inline-block; }
-
-/* line 362, style.scss */
-header .user_actions button {
-  color: white;
-  font-weight: 700;
-  font-size: 1.1em;
-  margin-left: 10px;
-  line-height: 100%; }
-
-/* line 369, style.scss */
 header .user_actions .ui-selectmenu-menu {
   background-image: none;
   padding: 0;
@@ -430,135 +393,97 @@ header .user_actions .sign_up {
 header .user_actions .list_property {
   background: #74b164; }
 
-/* line 391, style.scss */
 .listing_nav {
   height: 48px;
   width: 100%;
   position: relative;
   background: #74b164; }
+  .listing_nav .main {
+    position: relative;
+    margin: 0 auto;
+    width: 995px; }
+  .listing_nav a {
+    color: white;
+    text-decoration: none;
+    height: 100%;
+    display: block;
+    line-height: 48px;
+    font-size: .8em; }
+  .listing_nav .back {
+    float: left; }
+  .listing_nav .forward {
+    float: right;
+    margin-left: 10px; }
 
-/* line 396, style.scss */
-.listing_nav .main {
-  position: relative;
-  margin: 0 auto;
-  width: 995px; }
-
-/* line 401, style.scss */
-.listing_nav a {
-  color: white;
-  text-decoration: none;
-  height: 100%;
-  display: block;
-  line-height: 48px;
-  font-size: .8em; }
-
-/* line 409, style.scss */
-.listing_nav .back {
-  float: left; }
-
-/* line 410, style.scss */
-.listing_nav .forward {
-  float: right;
-  margin-left: 10px; }
-
-/* line 412, style.scss */
 .listing_meta {
   height: 76px;
   margin-bottom: 1em; }
+  .listing_meta h1, .listing_meta h2 {
+    font-weight: 400; }
+  .listing_meta h1 {
+    font-size: 1.75em;
+    margin-bottom: .125em; }
+  .listing_meta h2 {
+    font-size: 1em;
+    margin: .125em 0; }
+  .listing_meta .listing_neighborhood {
+    float: left;
+    width: 48%; }
+  .listing_meta .listing_availability {
+    float: right;
+    width: 48%;
+    text-align: right; }
 
-/* line 415, style.scss */
-.listing_meta h1, .listing_meta h2 {
-  font-weight: 400; }
-
-/* line 418, style.scss */
-.listing_meta h1 {
-  font-size: 1.75em;
-  margin-bottom: .125em; }
-
-/* line 422, style.scss */
-.listing_meta h2 {
-  font-size: 1em;
-  margin: .125em 0; }
-
-/* line 426, style.scss */
-.listing_meta .listing_neighborhood {
-  float: left;
-  width: 48%; }
-
-/* line 430, style.scss */
-.listing_meta .listing_availability {
-  float: right;
-  width: 48%;
-  text-align: right; }
-
-/* line 438, style.scss */
 .listing_details {
   width: 641px;
   float: left; }
+  .listing_details .share {
+    float: right;
+    display: block;
+    margin-top: 15px;
+    color: #4a4a4a;
+    text-decoration: none; }
+    .listing_details .share span {
+      font-family: "open_sans_regular", sans-serif;
+      margin-left: 7px;
+      font-size: .8em; }
+  .listing_details .listing_ng_title {
+    float: left; }
+  .listing_details .listing_overview {
+    padding: 7px;
+    border: 1px solid #dddddd;
+    width: 641px; }
+    .listing_details .listing_overview .listing_image {
+      position: relative; }
+      .listing_details .listing_overview .listing_image h3 {
+        font-weight: 400;
+        width: 100%;
+        position: absolute;
+        z-index: 9989;
+        bottom: 0px;
+        padding: 7px 100px 7px 7px;
+        color: white;
+        background: rgba(0, 0, 0, 0.25);
+        margin: 0; }
+      .listing_details .listing_overview .listing_image .favourite {
+        position: absolute;
+        bottom: 4px;
+        max-width: 10%;
+        text-decoration: none;
+        text-align: right;
+        font-size: 1.75em;
+        top: auto;
+        right: 0;
+        padding-right: 15px;
+        min-width: 100px;
+        color: white;
+        z-index: 9990;
+        font-weight: 400;
+        height: auto; }
+        .listing_details .listing_overview .listing_image .favourite:before {
+          color: #74b164;
+          margin-right: 7px; }
 
-/* line 441, style.scss */
-.listing_details .share {
-  float: right;
-  display: block;
-  margin-top: 15px;
-  color: #4a4a4a;
-  text-decoration: none; }
-
-/* line 447, style.scss */
-.listing_details .share span {
-  font-family: "open_sans_regular", sans-serif;
-  margin-left: 7px;
-  font-size: .8em; }
-
-/* line 453, style.scss */
-.listing_details .listing_ng_title {
-  float: left; }
-
-/* line 456, style.scss */
-.listing_details .listing_overview {
-  padding: 7px;
-  border: 1px solid #dddddd;
-  width: 641px; }
-
-/* line 460, style.scss */
-.listing_details .listing_overview .listing_image {
-  position: relative; }
-
-/* line 464, style.scss */
-.listing_details .listing_overview .listing_image h3 {
-  font-weight: 400;
-  width: 100%;
-  position: absolute;
-  z-index: 9989;
-  bottom: 0px;
-  padding: 7px 100px 7px 7px;
-  color: white;
-  background: rgba(0, 0, 0, 0.25);
-  margin: 0; }
-
-/* line 475, style.scss */
-.listing_details .listing_overview .listing_image .favourite {
-  position: absolute;
-  bottom: 4px;
-  max-width: 10%;
-  text-decoration: none;
-  text-align: right;
-  font-size: 1.75em;
-  top: auto;
-  right: 0;
-  padding-right: 15px;
-  min-width: 100px;
-  color: white;
-  z-index: 9990;
-  font-weight: 400;
-  height: auto; }
-
-/* line 491, style.scss */
-.listing_details .listing_overview .listing_image .favourite:before {
-  color: #74b164;
-  margin-right: 7px; }
-
-/* line 498, style.scss */
 .listing_details .listing_overview .listing_view_controls ul {
   list-style: none;
   margin: 7px 0 -19px 0;
@@ -638,26 +563,23 @@ header .user_actions .list_property {
   padding: 5px;
   background: #74B164;
   color: white; }
-
-#share ul {
-  background: #74B164;
-  top: 30px;
-  left: 0px;
-  width: 100%;
-  z-index: 9999;
-  position: absolute;
-  display: none; }
-
-#share:hover ul {
-  display: block;
-  list-style: none;
-  padding: 0; }
-
-#share:hover ul li i {
-  display: inline-block;
-  width: 15px;
-  margin-right: 5px;
-  text-align: center; }
+  #share ul {
+    background: #74B164;
+    top: 30px;
+    left: 0px;
+    width: 100%;
+    z-index: 9999;
+    position: absolute;
+    display: none; }
+  #share:hover ul {
+    display: block;
+    list-style: none;
+    padding: 0; }
+    #share:hover ul li i {
+      display: inline-block;
+      width: 15px;
+      margin-right: 5px;
+      text-align: center; }
 
 #share:hover ul a {
   display: block;
@@ -677,31 +599,37 @@ header .user_actions .list_property {
   list-style: none;
   padding: 0;
   margin: 0 0 1em 0; }
+  .errors li {
+    border: 1px solid #6f0b0b;
+    display: block;
+    width: 100%;
+    padding: 0.5em;
+    color: white;
+    background: #9e0f0f; }
 
-.errors li {
-  border: 1px solid #6f0b0b;
-  display: block;
-  width: 100%;
-  padding: 0.5em;
-  color: white;
-  background: #9e0f0f; }
-
-/* line 549, style.scss */
 ul.justified {
   text-align: justify; }
+  ul.justified li {
+    display: inline-block; }
+  ul.justified:after {
+    content: ' ';
+    display: inline-block;
+    width: 100%;
+    height: 0; }
 
-/* line 551, style.scss */
-ul.justified li {
-  display: inline-block; }
+ul#items {
+  padding-left: 0;
+  list-style: none; }
+  ul#items li {
+    float: left;
+    margin-right: 15px; }
+    ul#items li:nth-child(4n+4) {
+      margin-right: 0; }
+  ul#items:after {
+    content: ' ';
+    clear: both;
+    display: block; }
 
-/* line 554, style.scss */
-ul.justified:after {
-  content: ' ';
-  display: inline-block;
-  width: 100%;
-  height: 0; }
-
-/* line 561, style.scss */
 .ui-tooltip {
   box-shadow: none;
   color: white;
@@ -709,31 +637,26 @@ ul.justified:after {
   padding-bottom: 14px;
   border: none;
   background: none; }
+  .ui-tooltip:after {
+    content: ' ';
+    width: 0;
+    height: 0;
+    border-left: 7px solid transparent;
+    position: relative;
+    border-right: 7px solid transparent;
+    border-top: 7px solid #74b164;
+    font-size: 0;
+    left: calc(50% - 7px);
+    line-height: 0;
+    display: block;
+    margin-left: 27px; }
+  .ui-tooltip > div {
+    box-shadow: 0 0 10px black;
+    padding: 7px;
+    margin-left: 27px;
+    border-radius: 7px;
+    background: #74b164; }
 
-/* line 568, style.scss */
-.ui-tooltip:after {
-  content: ' ';
-  width: 0;
-  height: 0;
-  border-left: 7px solid transparent;
-  position: relative;
-  border-right: 7px solid transparent;
-  border-top: 7px solid #74b164;
-  font-size: 0;
-  left: calc(50% - 7px);
-  line-height: 0;
-  display: block;
-  margin-left: 27px; }
-
-/* line 582, style.scss */
-.ui-tooltip > div {
-  box-shadow: 0 0 10px black;
-  padding: 7px;
-  margin-left: 27px;
-  border-radius: 7px;
-  background: #74b164; }
-
-/* line 590, style.scss */
 .listing_sidebar {
   float: right;
   border-top: 1px solid #dddddd;
@@ -1426,6 +1349,9 @@ span.eyes.blink .eye {
   header .main {
     width: 100%; }
 
+  .admin_nav ul {
+    max-width: 100%; }
+
   /* line 1086, style.scss */
   .filter {
     padding: 0 1em; }
@@ -1473,7 +1399,22 @@ span.eyes.blink .eye {
   /* line 1124, style.scss */
   .main > form {
     width: 90%;
-    margin: 0 auto; } }
+    margin: 0 auto; }
+
+  .dropzone {
+    max-width: 100%; }
+
+  ul#items {
+    max-width: 100%;
+    margin: 0;
+    padding: 0;
+    text-align: center; }
+    ul#items li {
+      display: inline-block;
+      float: none;
+      margin: 10px; }
+      ul#items li:nth-child(4n+4) {
+        margin: 10px; } }
 @media only screen and (max-width: 57.94em) {
   /* line 1133, style.scss */
   #map-canvas, #chart {
