CSS Changes: - added more minor adjustments for responsive design Markup Changes: - moved class and title for rewards view on admin dashboard from the <span> to the <td>, to make the mouseover area larger. still not ideal but better than it was.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1939,6 +1939,9 @@ ul.hits::-webkit-scrollbar {
   position: relative;
   color: black; }
 
+section.my_properties {
+  max-width: 100%; }
+
 aside.my_properties a.property-add:hover {
   background: #5b964c; }
 aside.my_properties h3:first-child {
